// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Wip Empty 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      className="css-jfyhqj-wipClass"
    >
      <div
        className="css-101h4ki-wipContainerClass"
      >
        Work in progress
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Wip Main 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      className="css-jfyhqj-wipClass"
    >
      <div
        className="css-101h4ki-wipContainerClass"
      >
        Terminer ce composant
      </div>
    </div>
  </div>
</div>
`;
